<resources>
    <string name="app_name">Hola App Android</string>
    <string name="txtNombre">Nombre</string>
    <string name="editNombre">Escribe tu Nombre</string>
    <string name="txtTelefono">Telefono</string>
    <string name="editTelefono">Escribe tu Telefono</string>
    <string name="btnGuardar">Guardar Datos</string>
    
    <string name="activity_main_error">Campo Requerido</string>

</resources>